# afk-farm

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
akf_farm/: pyproject.toml
akf_farm/akf_farm/: hooks.py  install.py  modules.txt  permissions.py  seed.py
akf_farm/akf_farm/akf_farm/doctype/abnormal_report/: abnormal_report.py
akf_farm/akf_farm/akf_farm/doctype/akf_settings/: akf_settings.json  akf_settings.py
akf_farm/akf_farm/akf_farm/doctype/crop_cycle/: crop_cycle.py
akf_farm/akf_farm/akf_farm/doctype/cultivation_step/: cultivation_step.json  cultivation_step.py
akf_farm/akf_farm/akf_farm/doctype/daily_production/: daily_production.json  daily_production.py
akf_farm/akf_farm/akf_farm/doctype/farm_block/: farm_block.py
akf_farm/akf_farm/akf_farm/doctype/farm_task/: farm_task.json  test_farm_task.py
akf_farm/akf_farm/akf_farm/doctype/farm_zone/: farm_zone.json  farm_zone.py
akf_farm/akf_farm/akf_farm/doctype/support_request/: support_request.py
akf_farm/akf_farm/akf_farm/doctype/team_leader_report/: team_leader_report.py
akf_farm/akf_farm/akf_farm/tests/: test_generate.py  test_records.py
akf_farm/akf_farm/api/: admin_api.py  auth_api.py  field_api.py  sheet_import.py  test_api_crud.py  test_api_field.py  test_sheet_import.py
akf_farm/akf_farm/engine/: frequency.py  leader_kpi.py  status_calculator.py  task_generator.py  test_frequency.py  test_leader_kpi.py  test_task_generator.py  test_workload_balancer.py  workload_balancer.py
deploy/: Containerfile
docs/: TECH-STACK.md  (+8 more)
(+235 files in other folders)
